--- a/code/confs/dnerf.conf
+++ b/code/confs/dnerf.conf
@@ -1,20 +1,13 @@
 train{
-    expname = dtu
+    expname = dnerf
     dataset_class = datasets.scene_dataset.SceneDataset
     model_class = model.network.VolSDFNetwork
     loss_class = model.loss.VolSDFLoss
     learning_rate = 5.0e-4
     num_pixels = 1024
     checkpoint_freq = 100
-    plot_freq = 100#TODO
+    plot_freq = 100
     split_n_pixels = 1000
-    warmup_epoch = 500 #TODO
-}
-deform{
-    position_lr_init = 0.00016 #TODO
-    position_lr_final = 0.0000016 #TODO
-    position_lr_delay_mult = 0.01 #TODO
-    deform_lr_max_steps = 40_000 #TODO
 }
 plot{
     plot_nimgs = 1
@@ -26,14 +19,15 @@ loss{
     rgb_loss = torch.nn.L1Loss
 }
 dataset{
-    data_dir = D-NERF_synthetic_dataset/jumpingjacks #TODO
-    img_res = [800, 800] #TODO
+    data_dir = jumpingjacks
+    img_res = [800, 800]
+    scan_id = jumpingjacks
+    white_bkgd = True
 }
 model{
+    white_bkgd = True
     feature_vector_size = 256
     scene_bounding_sphere = 3.0
-    colored_bkgd = False#TODO
-    bg_color = [0.0, 0.0, 0.0]#TODO
     implicit_network
     {
         d_in = 3
@@ -44,7 +38,7 @@ model{
         skip_in = [4]
         weight_norm = True
         multires = 6
-        sphere_scale = 20.0
+        # sphere_scale = 10.0
     }
     rendering_network
     {
@@ -64,7 +58,7 @@ model{
     }
     ray_sampler
     {
-        near = 2.0
+        near = 0.0
         far = 6.0
         N_samples = 64
         N_samples_eval = 128
