--- a/code/confs/spring_Gaus.conf
+++ b/code/confs/spring_Gaus.conf
@@ -1,21 +1,13 @@
 train{
-    expname = dtu
+    expname = dnerf
     dataset_class = datasets.scene_dataset.SceneDataset
     model_class = model.network.VolSDFNetwork
     loss_class = model.loss.VolSDFLoss
     learning_rate = 5.0e-4
     num_pixels = 1024
     checkpoint_freq = 100
-    plot_freq = 500
+    plot_freq = 100
     split_n_pixels = 1000
-    num_max_frame = 10 #TODO
-    warmup_epoch = 500 #TODO
-}
-deform{
-    position_lr_init = 0.00016 #TODO
-    position_lr_final = 0.0000016 #TODO
-    position_lr_delay_mult = 0.01 #TODO
-    deform_lr_max_steps = 40_000 #TODO
 }
 plot{
     plot_nimgs = 1
@@ -28,9 +20,12 @@ loss{
 }
 dataset{
     data_dir = spring_Gaus/bun #TODO
-    img_res = [1080, 1920] #TODO
+    img_res = [1080, 1920]
+    scan_id = bun
+    white_bkgd = True
 }
 model{
+    white_bkgd = True
     feature_vector_size = 256
     scene_bounding_sphere = 3.0
     implicit_network
@@ -43,7 +38,7 @@ model{
         skip_in = [4]
         weight_norm = True
         multires = 6
-        sphere_scale = 20.0
+        # sphere_scale = 10.0
     }
     rendering_network
     {
@@ -64,6 +59,7 @@ model{
     ray_sampler
     {
         near = 0.0
+        far = 6.0
         N_samples = 64
         N_samples_eval = 128
         N_samples_extra = 32
