sdf+neurofluid双预训练的模型，transform的效果不佳

--- a/code/confs/dnerf_transformers_jumpingjacks.conf
+++ b/code/confs/dnerf_transformers_jumpingjacks.conf
@@ -19,9 +19,9 @@ loss{
     rgb_loss = torch.nn.L1Loss
 }
 dataset{
-    data_dir = spring_Gaus/bun #TODO
-    img_res = [1080, 1920]
-    scan_id = bun
+    data_dir = D-NERF_synthetic_dataset/jumpingjacks #TODO
+    img_res = [800, 800]
+    scan_id = jumpingjacks
     white_bkgd = True
 }
 model{
