--- a/code/confs/dnerf_transformers_pudding.conf
+++ b/code/confs/dnerf_transformers_pudding.conf
@@ -19,9 +19,9 @@ loss{
     rgb_loss = torch.nn.L1Loss
 }
 dataset{
-    data_dir = spring_Gaus/bun #TODO
-    img_res = [1080, 1920]
-    scan_id = bun
+    data_dir = Blender_synthetic_dataset/pudding #TODO
+    img_res = [1080, 1080]
+    scan_id = pudding
     white_bkgd = True
 }
 model{
