--- a/code/confs/dnerf_transformers_real_world.conf
+++ b/code/confs/dnerf_transformers_real_world.conf
@@ -5,8 +5,8 @@ train{
     loss_class = model.loss.VolSDFLoss
     learning_rate = 5.0e-4
     num_pixels = 1024
-    checkpoint_freq = 100
-    plot_freq = 100
+    checkpoint_freq = 200
+    plot_freq = 200
     split_n_pixels = 1000
 }
 plot{
@@ -19,9 +19,9 @@ loss{
     rgb_loss = torch.nn.L1Loss
 }
 dataset{
-    data_dir = jumpingjacks
-    img_res = [800, 800]
-    scan_id = jumpingjacks
+    data_dir = DTU_from_4D_20240709_ypzhao_resized #TODO
+    img_res = [1200, 1920]
+    scan_id = real_world
     white_bkgd = True
 }
 model{
@@ -55,7 +55,7 @@ model{
         exclude_ray = True
         same_smooth_factor = False
         fix_radius = True
-        particle_radius = 1.0 #Initialized as 0.0, will be updated in the code as the pcd is created
+        particle_radius = 1.0 #Initialized as 1.0, will be updated in the code as the pcd is created
         search_raduis_scale = 9.0
         N_neighbor = 20
     }
